--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
                     </P>
                     </p>
                 </div>
+                <p>&copy; Dave | Tech bogeyman</p>
             </div>
         </section>
         <section class="porfolio" id="porfolio">
@@ -270,8 +271,10 @@
                 <div class="img1" id="img1">
                     <img src="Kisumu.jpeg.jpg" alt="">
                 </div>
+                <p>&copy; Dave | Tech bogeyman</p>
 
             </div>
+            
         </section>
         <section class="contacts" id="contacts">
             <div class="cont">CONTACT ME</div>
@@ -301,7 +304,8 @@
                 Email or phone: <input type="text" placeholder="Email or Phone"><br>
                 Full names: <input type="text" placeholder="Full Names"><br>
                 Message: <textarea type="text" placeholder="Your message!"></textarea>
-                <button>SEND</button>
+                <button>SEND</button><br><br>
+                <p>&copy; Dave | Tech bogeyman</p>
             </form>
 
         </section>
@@ -342,6 +346,6 @@
     </div>
 
 </body>
-<script src="index.js" defer></script>
+<script src="index.js" async></script>
 
 </html>
