--- a/index.html
+++ b/index.html
@@ -299,14 +299,15 @@
 
             </div>
             <form class="message">
-                <h1>Send a Message!</h1>
+                <h1>Send a message...</h1>
 
                 Email or phone: <input type="text" placeholder="Email or Phone"><br>
                 Full names: <input type="text" placeholder="Full Names"><br>
                 Message: <textarea type="text" placeholder="Your message!"></textarea>
-                <button>SEND</button><br><br>
-                <p>&copy; Dave | Tech bogeyman</p>
+                <button>SEND</button>
             </form>
+            <br>
+            <p style="margin-left: 10rem;">&copy; Dave | Tech bogeyman</p>
 
         </section>
     </main>
